manifests/argocd/delete-argocd-networkpolicy.yml

# repo-server Podとnotifications-controller Pod、pplication-controller Pod
# が動作しているに関わらず
# LivenessProveのチェックが意図通りに機能せずCrashLoopBackoffになってしまうため
# 暫定的に該当のNetworkPolicyを削除することで対処する
---
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-notifications-controller-network-policy

---
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-repo-server-network-policy

---
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd argocd-application-controller-network-policy
